# PatchCraft

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: AUXILIARY.md  ROADMAP.md  SCOPE.md  THEORY.md  USAGE.md
docs/ADR/: 0001-patch-extraction-api.md  0002-patchify-transform.md
lab/: README.md
src/patchcraft/: __init__.py  geometry.py  metrics.py  pair.py  reconstruct.py  stitch.py
src/patchforge/: __init__.py  cache.py  extract.py  geometry.py  metrics.py  pair.py  reconstruct.py  stitch.py
src/patchkit/: __init__.py  extract.py  geometry.py  metrics.py  pair.py  reconstruct.py  resize.py  stitch.py
tests/: _datasets.py  conftest.py  test_cache.py  test_datasets_helper.py  test_extract.py  test_geometry.py  test_import.py  test_metrics.py  test_pair.py  test_reconstruct.py  test_resize.py  test_stitch.py
