[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "patchkit"
description = "Image patch extraction, pairing and reconstruction utilities for super-resolution and dataset pipelines."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Leonardo Marques de Souza" }]
keywords = ["image", "patches", "super-resolution", "dataset", "torch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.26",
    "torch>=2.6",
    "pillow>=10",
]

[project.optional-dependencies]
cache = ["zstandard>=0.22"]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff>=0.5",
    "mypy>=1.10",
    # framework auxiliar (test fixtures, lab/): NOT a runtime dep of patchkit
    "torchvision>=0.20",
]

[project.urls]
Homepage = "https://github.com/LeoPR/PatchKit"
Issues = "https://github.com/LeoPR/PatchKit/issues"

[tool.hatch.version]
path = "src/patchkit/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/patchkit"]

[tool.hatch.build.targets.wheel.force-include]
"src/patchkit/py.typed" = "patchkit/py.typed"

[tool.pytest.ini_options]
cache_dir = "Z:\\caches\\pytest"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: long-running tests (deselect with -m 'not slow')",
    "gpu: requires CUDA",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "pip>=26.1.1",
    "setuptools>=82.0.1",
    "wheel>=0.47.0",
]
